Prevent <th>es from wrapping mid-word, and widen the Speed header.
For some people it was saying:

Spee
d

Apparently slapping word-wrap: break-word on everything wasn't the best
solution; this isn't the only place it's happening, but it's the only
prominent one that I know of.  (The other is the Buy Pokémon/Items cart
table, and only if you have a balance of at least four digits.)  I'll
have to figure out some better CSS later; I just want to quickly fix
this for now.

--- a/asb/static/asb.css
+++ b/asb/static/asb.css
@@ -115,6 +115,7 @@ table.standard-table {
 table.effect-table { width: 100%; }
 
 td, th { padding: 0.5rem; line-height: 1rem; }
+th { word-wrap: normal; }
 
 thead { border-bottom: 2px solid #7799EE; }
 tfoot { border-top: 2px solid #7799EE; }
@@ -166,7 +167,7 @@ col.population { width: 3.5rem; }
 col.price { width: 4rem; }
 col.summary { width: 100%; }
 col.stat { width: 3rem; }
-col.stat-speed { width: 4.5rem; }  /* Wide header */
+col.stat-speed { width: 5rem; }  /* Wide header */
 col.ticky { width: 2rem; }
 col.trainer { width: 13rem; }
 col.type-col { width: 90px; }
